# LibOVR

./: CMakeLists.txt
LibOVR/Include/: OVR_CAPI.h  OVR_Version.h
LibOVRKernel/Src/Tracing/: LibOVREvents.man
LibOVRKernel/Src/Util/: Util_D3D11_Blitter.cpp
